fix: deprecated usage of newInstance()